@@ -1,21 +1,24 @@
 package TRaMis8khae.starbucks.event.application;
 
-import TRaMis8khae.starbucks.event.dto.EventInfoResponseDto;
-import TRaMis8khae.starbucks.event.dto.EventRequestDto;
+import TRaMis8khae.starbucks.event.dto.out.EventInfoResponseDto;
+import TRaMis8khae.starbucks.event.dto.in.EventRequestDto;
 import TRaMis8khae.starbucks.event.entity.Event;
 import TRaMis8khae.starbucks.event.entity.EventMedia;
+import TRaMis8khae.starbucks.event.entity.ProductEventList;
 import TRaMis8khae.starbucks.event.infrastructure.EventMediaRepository;
 import TRaMis8khae.starbucks.event.infrastructure.EventRepository;
 import TRaMis8khae.starbucks.event.infrastructure.ProductEventListRepository;
+import TRaMis8khae.starbucks.product.entity.Product;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toList;
 
 
 @Slf4j
@@ -37,55 +40,91 @@ public class EventServiceImpl implements EventService {
     }
 
     @Override
-    public List<String> getEventUUID(Long eventId) {
+    public List<String> getProductUUID(Long eventId) {
 
        return productEventListRepository.findAllByEventId(eventId)
                .stream()
                .map(productEventList -> productEventList.getProductUUID())
-               .collect(Collectors.toList());
+               .toList();
 
     }
 
     @Override
-    public void addEvent(EventRequestDto requestDto, MultipartFile image) {
-
-        Event event = requestDto.toEntity(requestDto);
-
-        eventRepository.save(event);
-
-        String imagePath = "D:/saved_images";
-        String fileName = image.getOriginalFilename();
-        File file = new File(imagePath, fileName);
-
-//        try {
-//            image.transferTo(file);
-//            EventMedia eventMedia = EventMedia.builder()
-//                    .mediaUrl(file.getAbsolutePath())
-//                    .build();
-//        } catch (Exception e) {
-//            log.error("이미지 저장 실패", e);
-//        }
+    public void addEvent(EventRequestDto requestDto) {
 
     }
-
-    @Override
-    public Optional<Event> getEventWithMedia(Long eventId) {
-        return eventRepository.findById(eventId);
-    }
+//
+//    @Override
+//    public Optional<Event> getEventWithMedia(Long eventId) {
+//        return eventRepository.findById(eventId);
+//    }
 
     @Override
     public EventInfoResponseDto getEvent(Long eventId) {
-        Optional<Event> eventOptional = eventRepository.findById(eventId);
+        Optional<Event> event = eventRepository.findById(eventId);
 
-        Event event = eventOptional.get();
+//        Event event = eventOptional.get();
 
-        List<EventMedia> eventMediaList = eventMediaRepository.findByEventId(eventId);
+//        List<EventMedia> eventMediaList = eventMediaRepository.findByEventId(eventId);
 
-        List<String> mediaPath = eventMediaList.stream()
-                .map(EventMedia::getMediaUrl)
-                .collect(Collectors.toList());
+//        List<String> mediaPath = eventMediaList.stream()
+//                .map(EventMedia::getMediaUrl)
+//                .collect(toList());
 
-        return EventInfoResponseDto.fromEntity(event, mediaPath);
+        return event.map(EventInfoResponseDto::toDto).orElse(null);
+    }
+
+
+    // crawling event, eventProduct 추가
+    @Override
+    public List<Event> addCrawlingEvent(int numberOfEvents) {
+
+        List<Event> events = new ArrayList<>();
+
+        for (int i = 0; i < numberOfEvents; i++) {
+            Event event = Event.builder()
+                    .eventName("event" + i)
+                    .discountRate(10)
+                    .build();
+            events.add(event);
+        }
+
+        return events;
+
+    }
+
+    @Override
+    public void assignProductsToEvents(List<Product> products, List<Event> events, int productsPerEvent) {
+        int eventIndex = 0;
+
+        for (int i = 0; i < products.size(); i += productsPerEvent) {
+            int endIndex = Math.min(i + productsPerEvent, products.size());
+            List<Product> productSubList = products.subList(i, endIndex);
+
+            Event event = events.get(eventIndex);
+            saveEventProductList(event, productSubList);
+
+            eventIndex++;
+            if (eventIndex >= events.size()) {
+                break;
+            }
+        }
+    }
+
+    private void saveEventProductList(Event event, List<Product> products) {
+        for (Product product : products) {
+            ProductEventList productEventList = ProductEventList.builder()
+                    .product(product)
+                    .event(event)
+                    .build();
+            productEventListRepository.save(productEventList);
+        }
+    }
+
+    @Override
+    public void processEventProductMapping(List<Product> crawledProducts) {
+        List<Event> events = addCrawlingEvent(8);
+        assignProductsToEvents(crawledProducts, events, 5);
     }
 
 }
